[package]
name = "acquire_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = {version = "3.2.0", features = ["fancy"] }
rand = "0.8.0"
clap = {version = "3.0.0", features = ["derive"] }
owo-colors = "3.2.0"

[features]
